--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ config/s3.yml
 config/gmail_env_variables.yaml
 config/devise_keys.yaml
 config/stripe_env_variables.yaml
+config/facebook_accesstoken_for_rspec.rb
